CKA-CKS-CKAD/resourcequotas/cka-q5-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-app
  namespace: test
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      args: ["sh", "-c", "cat /app/data/date && sleep 6000"]
      volumeMounts:
        - name: cka-volume
          mountPath: /app/data
  volumes:
    - name: cka-volume
      emptyDir: {}
