CKA-CKS-CKAD/resourcequotas/cka-q6-data-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: data-plane-pod
  name: data-plane-pod
spec:
  containers:
    - image: httpd
      name: data-plane-pod
      resources:
        limits:
          cpu: 150m
          memory: 250Mi
          ephemeral-storage: 1G
  dnsPolicy: ClusterFirst
  restartPolicy: Always
