CKA-CKS-CKAD/resourcequotas/cka-q8-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: voyager
  name: voyager
  namespace: space
spec:
  containers:
    - image: httpd
      name: voyager
      resources: {}
      volumeMounts:
        - name: cka-q8
          mountPath: "/cka-Q8/data"
  volumes:
    - name: cka-q8
      configMap:
        name: cm-8
        items:
          - key: tier1
            path: tier1
          - key: tier2
            path: tier2
          - key: tier3
            path: tier3
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
